[tool.poetry]
name = "cclm"
version = "0.1.1"
description = "NLP framework for composing together models modularly"
authors = ["jamesmf"]
license = "MIT"
homepage = "https://github.com/jamesmf/cclm"
repository = "https://github.com/jamesmf/cclm"
keywords = ["nlp", "modular", "embedding", "composable"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = "^2.0.0"
datasets = "^1.1.3"
tqdm = "^4.0.0"
tokenizers = "^0.10.0"
mlflow = "^1.16.0"
requests = "^2.25.1"
importlib-metadata = {version = "^1.6.0", python = "<3.8"}

[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/legacy/"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
